--- a/app/views/users/index.pdf.erb
+++ b/app/views/users/index.pdf.erb
@@ -1,1 +1,252 @@
-<h1>hogehogehogeohgoehgoheogheho</h1>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="stylesheets/style.css" media="all">
+    <%= wicked_pdf_stylesheet_link_tag "style" %>
+    <title>履歴書</title>
+</head>
+<body>
+    <article class="print_page">
+        <header id="header" class="clearfix">
+            <h1>履歴書</h1>
+            <p>2016年4月16日現在</p>
+        </header>
+        <div id="box1">
+            <section id="name">
+                <div class="ruby">
+                    <h1>ふりがな</h1>
+                    <p>ためしになんかんかく<!-- 氏名のふりがなをこちらに書き込んでください。 --></p>
+                </div>
+                <h1>氏名</h1>
+                <p>試しになんか書く<!-- 氏名をこちらに書き込んでください。 --></p>
+            </section>
+            <div id="box1-1">
+                <section id="birthday">
+                    <p>1990年4月4日<!-- 誕生日をこちらに書き込んでください。 --></p>
+                </section>
+                <section id="sex">
+                    <p>男<!-- 性別をこちらに書き込んでください。 --></p>
+                </section>
+            </div>
+        </div>
+        <div id="box2">
+            <section id="address">
+                <div class="ruby">
+                    <h1>ふりがな</h1>
+                    <p>ためしになんかかく<!-- 現住所のふりがなをこちらに書き込んでください。 --></p>
+                </div>
+                <h1>現住所</h1>
+                <p id="post">〒090-6261<!-- 郵便番号をこちらに書き込んでください。 --></p>
+                <p>試しになんかかく<!-- 住所をこちらに書き込んでください。 --></p>
+            </section>
+            <section class="tel">
+                <h1>電話</h1>
+                <p>012-3456-7890<!-- 電話番号をこちらに書き込んでください。 --></p>
+            </section>
+            <section class="phone">
+                <h1>携帯</h1>
+                <p>012-3456-7890<!-- 携帯電話の番号をこちらに書いてください --></p>
+            </section>
+            <section id="contact">
+                <div class="ruby">
+                    <h1>ふりがな</h1>
+                    <p>ためしになんかかく<!-- 連絡先が現住所と違う場合は、連絡先のふりがなをこちらに書いてください。 --></p>
+                </div>
+                <h1>連絡先</h1>
+                <p>試しになんかかく<!-- 連絡先が現住所と違う場合は、連絡先をこちらに書いてください。同じ場合は「同上」と書いてください。 --></p>
+            </section>
+            <section class="tel">
+                <h1>電話</h1>
+                <p>012-3456-7890<!-- 連絡先電話番号をこちらに書いてください。 --></p>
+            </section>
+            <section class="other_contact">
+                <h1>メール<!-- 他連絡手段がある場合はこちらにその連絡手段を書いてください。 --></h1>
+                <p>jone@due.com<!-- 他連絡手段がある場合はこちらにその連絡先を書いてください。 --></p>
+            </section>
+        </div>
+        <section id="resume">
+            <table>
+                <tr>
+                    <th>年</th>
+                    <th>月</th>
+                    <th>学歴・職歴</th>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td class="center">学歴</td>
+                </tr>
+                <tr>
+                    <td>平成X年<!-- 中学校を卒業した年を書いてください。 --></td>
+                    <td>X月<!-- 中学校を卒業した月を書いてください。 --></td>
+                    <td>ほげ立ほげ学校卒業<!-- 卒業した中学校の名前を書いてください。 --></td>
+                </tr>
+                <tr>
+                    <td><!-- 高等学校に入学した年を書いてください。 --></td>
+                    <td><!-- 高等学校に入学した月を書いてください。 --></td>
+                    <td><!-- 入学した高等学校の名前を書いてください。 --></td>
+                </tr>
+                <tr>
+                    <td><!-- 高等学校を卒業した年を書いてください。 --></td>
+                    <td><!-- 高等学校を卒業した月を書いてください。 --></td>
+                    <td><!-- 卒業した高等学校の名前を書いてください。 --></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td><!-- 以降、履歴書の書き方など調べ、参考にして書いてください。 --></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td class="center">職歴</td>
+                </tr>
+                <tr>
+                    <td>平成Y年</td>
+                    <td>X月</td>
+                    <td>株式会社ほげ入社</td>
+                </tr>
+                <tr>
+                    <td>平成Z年</td>
+                    <td>X月</td>
+                    <td>株式会社ほげ　自己都合により退職</td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td class="right">以上</td>
+                </tr>
+            </table>
+        </section>
+    </article>
+    <article class="print_page">
+        <section id="license">
+            <table>
+                <tr>
+                    <th>年</th>
+                    <th>月</th>
+                    <th>免許・資格</th>
+                </tr>
+                <tr>
+                    <td>平成X年<!-- 免許・資格を取得した年を書いてください。 --></td>
+                    <td>Y月<!-- 免許・資格を取得した月を書いてください。 --></td>
+                    <td>ほげふが免許取得<!-- 免許・資格名を書いてください。 --></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td><!-- 以降、履歴書の書き方など調べ、参考にして書いてください。 --></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td><!-- 行数が足りない場合は、他の欄を減らすか、新しいarticleを作成し、それにprint_pageクラスを追加したうえ、こちらと同じ表を作成してください。 --></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </table>
+        </section>
+        <section id="PR">
+            <h1>自己PR</h1>
+            <p>ほげふがぴよ<!-- ここに自己PRを書いてください。 --></p>
+        </section>
+        <section id="skill">
+            <h1>自己保有スキル</h1>
+            <p>ほげふがぴよ<!-- ここに自己保有スキルを書いてください。 --></p>
+        </section>
+        <div id="box3">
+            <section id="motive">
+                <h1>志望の動機<!-- 必要があれば「特技」や「好きな学科」を書き加えるなどしてください。 --></h1>
+                <p>ほげふがぴよ<br>ぴよぴよふが<br>ふがふがぴよ<!-- ここに志望動機などを書いてください --></p>
+            </section>
+            <section id="commuting_time">
+                <h1>通勤時間</h1>
+                <p>1時間<!-- ここにおおよその通勤時間を書いてください。 --></p>
+            </section>
+            <section id="dependant">
+                <h1>扶養家族（配偶者を除く）</h1>
+                <p>なし<!-- ここに配偶者を除く扶養家族を書いてください。 --></p>
+            </section>
+            <div id="box3-1">
+                <section id="spouse">
+                    <h1>配偶者の有無</h1>
+                    <p>なし<!-- ここに配偶者の有無を書いてください。--> </p>
+                </section>
+                <section id="supporting_duty">
+                    <h1>配偶者の扶養義務</h1>
+                    <p>なし<!-- ここに配偶者の扶養義務の有無を書いてください。 --></p>
+                </section>
+            </div>
+        </div>
+        <section id="request" class="clearfix">
+            <h1>本人希望記入欄</h1>
+            <ul>
+                <li>勤務地にほげを希望します。<!-- ここにあなたが会社に希望することを書き込んでください。 --></li>
+                <li><!-- 特に給与、職種、勤務時間、勤務地などを書くといいと思います。 --></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </section>
+    </article>
+</body>
+</html><!DOCTYPE html>
